--- a/public/front/css/header.css
+++ b/public/front/css/header.css
@@ -1220,9 +1220,13 @@
     }
 
     #header20 .support .headerHelpMenu .menuLink {
-        color: #0d55d4 !important;
+        /* color: #0d55d4 !important; */
+        color:#2B2D42!important;;
     }
-
+    #header20 .support .headerHelpMenu a {
+        /* color: #0d55d4 !important; */
+        color:#2B2D42!important;;
+    }
     #header20 .support * {
         color: #fff;
         text-decoration: none;
@@ -1535,10 +1539,12 @@
         }
 
         #header20 .menu20 ul .menuTitle {
-            color: #343399;
+            /* color: #343399; */
+            color:#2B2D42;
             line-height: 62px;
             padding: 0em 1em;
-            font-weight: bold;
+            font-weight: 500;
+            /* font-weight: bold; */
             display: inline-block;
             text-decoration: none;
             font-size: 16px;
@@ -1601,6 +1607,7 @@
             box-sizing: border-box;
             width: 100%;
             padding: 1em;
+            color:
         }
 
         #header20 .menu20 .menu20Content .title.noL3 a:hover {
@@ -2133,7 +2140,8 @@
 
         #header20 .menu20 .menuTitle {
             cursor: pointer;
-            color: #00185E;
+            /* color: #00185E; */
+            color:#2B2D42;
             padding: 0.5em 1em;
             font-weight: bold;
             display: inline-block;
